Style updates: Modal filter disable button wrong background color fix

--- a/src/styles/_buttons.scss
+++ b/src/styles/_buttons.scss
@@ -169,6 +169,11 @@ button, input[type='submit'], input[type='button'], .btn  {
       color: tint(#ca332d, 10%);
     }
   }
+  &[disabled] {
+    background-color: transparent;
+    color: $lightgray;
+    pointer-events: none;
+  }
 }
 
 .btn-subtle {
